fixed heading spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,53 +3,62 @@
 @tailwind utilities;
 
 
-h1{
-    text-align: center;
-    font-weight: bold;
-    font-size: 1.5rem;
-    padding:10px 0;
-  
-  }
-  h2{
-    font-weight: bold;
-    font-size: 1.3rem;
-    padding:10px 0;
-  }
-  h3{
-    font-weight: 600;
-    font-size: 1.1rem;
-    padding:10px 0;
-    margin: 20px 0px;
-  }
-  h4{
-    text-align: center;   
-    padding:5px 0;
-  }
-  h5{
-    padding: 8px 0;
-    margin: 20px 0px;
-    font-weight: 600;
-    font-size: 1rem;
-  }
-  h6{
-    padding: 8px 0;
-    margin: 10px 0px;
-    font-weight: 400;
-    font-size: 0.6rem;
-  }
-  ul li{
-    list-style-type: disc;
-    margin-left:50px;
-    padding:2px 0;
-  }
-  ol li{
-    list-style-type:decimal;
-    margin-left:50px;
-    padding:2px 0;
-  }
-  .test{
-    visibility: hidden;
-  }
-  .list-none{
-list-style: none;
-  }
+h1 {
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.5rem;
+  padding: 10px 0;
+
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 1.3rem;
+  padding: 10px 0;
+}
+
+h3 {
+  font-weight: 600;
+  font-size: 1.1rem;
+  padding: 10px 0;
+  margin: 20px 0px;
+}
+
+h4 {
+  text-align: center;
+  padding: 5px 0;
+}
+
+h5 {
+  padding: 8px 0;
+  margin: 20px 0px 5px 0px;
+  font-weight: 600;
+  font-size: 1rem;
+}
+
+h6 {
+  padding: 8px 0;
+  margin: 10px 0px;
+  font-weight: 400;
+  font-size: 0.6rem;
+}
+
+ul li {
+  list-style-type: disc;
+  margin-left: 50px;
+  padding: 2px 0;
+}
+
+ol li {
+  list-style-type: decimal;
+  margin-left: 50px;
+  padding: 2px 0;
+}
+
+.test {
+  visibility: hidden;
+}
+
+.list-none {
+  list-style: none;
+}
